<resources>
    <string name="app_name">SafeRoute</string>
    <string name="comenzar">Comenzar</string>
    <string name="escribe_tu_contrase_a">Escribe tu Contraseña</string>
    <string name="escribe_tu_nombre">Escribe tu nombre</string>
    <string name="escribe_tu_email">Escribe tu Email</string>
    <string name="nombre_del_solicitante">Nombre del solicitante</string>
    <string name="abrir_en_maps">Abrir en Maps</string>
    <string name="x">X</string>
    <string name="confirma_tu_contrase_a">Confirma tu Contraseña</string>
    <string name="sign_up">Sign Up</string>
</resources>